# AteNika

./: .gitignore  APiece.hpp  CMakeLists.txt  Move.hpp  Names.hpp  Pawn.cpp  PosesHistory.cpp  PosesHistory.hpp  Position.cpp  Position.hpp  README.md  ZobristHash.cpp  ZobristHash.hpp  book.txt  global.cpp  global.hpp  king.cpp  knight.cpp  main.cpp  move.hpp  names.hpp  pawn.cpp  pieces.cpp  pieces.hpp  zobrist_hash.cpp  zobrist_hash.hpp
base/include/: Bitboard.hpp  Pieces.hpp  PosesHistory.hpp  ZobristHash.hpp  bitboard.hpp  pieces.hpp  poses_history.hpp  position.hpp  zobrist_hash.hpp
base/src/: Bitboard.cpp  Pieces.cpp  ZobristHash.cpp  bitboard.cpp  global.cpp  pieces.cpp  poses_history.cpp  position.cpp  zobrist_hash.cpp
chess/: attacks.cpp  attacks.hpp  bitfunc.hpp  board.cpp  board.hpp  defs.hpp  main.cpp  move.cpp  move.hpp  move_list.cpp  move_list.hpp  movegen.cpp  movegen.hpp  movepicker.cpp  movepicker.hpp  pawn.cpp  pawn.hpp  rays.cpp  rays.hpp  zobrist_hash.cpp  zobrist_hash.hpp
moves/include/: BishopAttacks.hpp  BishopMask.hpp  KingMask.hpp  KnightMask.hpp  QueenMask.hpp  Rays.h  Rays.hpp  RookMask.hpp  SlAttack.hpp  SlAttacks.hpp  attacks.hpp  bishop_mask.hpp  king_mask.hpp  knight_mask.hpp  move.hpp  move_array.hpp  rays.hpp  rook_mask.hpp  sliding_attacks.hpp
moves/src/: Rays.cpp  SlAttack.cpp  SlAttacks.cpp  attacks.cpp  move_array.cpp  rays.cpp  sliding_attacks.cpp
src/: MoveList.cpp  MoveList.hpp  Ttable.cpp  Ttable.hpp  attacks.cpp  attacks.hpp  bitfunc.cpp  bitfunc.hpp  board.cpp  board.hpp  book.cpp  book.hpp  defs.hpp  eval.cpp  eval.hpp  evaluation.cpp  evaluation.hpp  history.cpp  history.hpp  interface.cpp  interface.hpp  main.cpp  move.cpp  move.hpp  move_list.cpp  move_list.hpp  movegen.cpp  movegen.hpp  movepicker.cpp  movepicker.hpp  mvv_lva.cpp  mvv_lva.hpp  order_info.cpp  order_info.hpp  pgn_parser.cpp  pgn_parser.hpp  piece_square_tables.cpp  piece_square_tables.hpp  pst.cpp  pst.hpp  (+18 more)
test/: attacks_test.cpp  bitfunc_test.cpp  board_test.cpp  eval_test.cpp  mate_test.cpp  movegen_test.cpp  movepicker_test.cpp  perft.cpp  perft_comparison.cpp  zob_hash_test.cpp
